# noematic

./: .clang-format  .eslintrc.js  .gitignore  .prettierignore  COPYING  Cargo.toml  GNUmakefile  README.md  deny.toml  dune-project  eslint.config.mjs  flake.nix  noematic.opam  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  update.yml
configurator/: Cargo.toml
configurator/src/: main.rs
extension/: .eslintignore  .eslintrc.cjs  .eslintrc.js  .prettierrc.cjs  .prettierrc.js  dune  eslint.config.mjs  manifest.chromium.json  manifest.firefox.json  manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
extension/background/: background.event.mjs  background.mjs  background.ml  background.worker.mjs  dune
extension/common/: chrome.ml  chrome.mli  common.mjs  common.ts  dune  message-collector.mjs  types.d.ts
extension/content/: content.js  content.ml  dune
extension/popup/: dune  popup.css  popup.html  popup.mjs  popup.ml
extension/scripts/: build.mjs  common.mjs  create-host-manifest.mjs  generate.mjs  install-host-manifest.mjs
extension/search/: dune  index.html  search-result.mjs  search.css  search.mjs  search.ml
extension/src/: manifest.json
extension/src/background/: background.event.mjs  background.mjs  background.worker.mjs
extension/src/common/: common.mjs  common.ts  types.d.ts
extension/src/content/: content.js
extension/src/popup/: popup.css  popup.html  popup.mjs
extension/src/search/: index.css  index.html  search-result.css  search-result.mjs  search.css  search.html  search.mjs  shared.css
extension/tests/: fixtures.ts  popup.spec.ts
host/: Cargo.toml  dune  noematic.ml
host/lib/: create.sql  db.ml  db.mli  dune  filename_ext.c  filename_ext.ml  filename_ext.mli  host.ml  host.mli  message.ml  message.mli  protocol.ml  unix_ext.c  unix_ext.ml  unix_ext.mli
host/noematic/: Cargo.toml
host/noematic-web/: Cargo.toml
host/noematic-web/src/: lib.rs
host/noematic-web/tests/: wasm.rs
host/noematic/src/: main.rs  message.rs
host/src/: create.sql  create_schema_version.sql  create_sites.sql  create_sites_ad.sql  create_sites_ai.sql  create_sites_au.sql  create_sites_fts.sql  db.rs  lib.rs  main.rs  message.rs  schema_version.rs
host/src/db/: schema_version.rs
host/test/: dune  host_test.ml  main_test.ml  message_expect.ml  message_test.ml
host/tests/: basic.rs  cli_tests.rs
host/tests/base/: mod.rs
host/tests/common/: mod.rs
lib/: db.ml  db.mli  dune  host.ml  host.mli  message.ml  message.mli  protocol.ml
scripts/: build.mjs  configure.ml  create-host-manifest.mjs  dune  filename_ext.ml  filename_ext.mli  noematic-configure.js  realpath.c
src/: lib.rs  main.rs
test/: dune  main_test.ml  min.mjs  min.ml  smoke.mjs  smoke.ml
tests/: fixtures.ts  popup.spec.ts
xtask/: Cargo.toml
xtask/src/: main.rs
