[workspace]
resolver = "2"

members = ["configurator", "host", "xtask"]

[workspace.package]
license = "ISC"

[workspace.dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.20", default-features = false, features = ["std", "derive", "help", "string", "usage"] }
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
