[package]
name = "configurator"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "noematic-configure"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.20", default-features = false, features = ["std", "derive", "help", "string", "usage"] }
directories.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
