[package]
name = "configurator"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "noematic-configure"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
