(install
 (section share)
 (files
  (manifest.json as extension/manifest.json)
  (background/background.mjs as extension/background/background.mjs)
  (content/content.js as extension/content/content.js)
  (icons/noematic-48.png as extension/icons/noematic-48.png)
  (popup/popup.css as extension/popup/popup.css)
  (popup/popup.html as extension/popup/popup.html)
  (popup/popup.mjs as extension/popup/popup.mjs)
  (search/index.html as extension/search/search.html)
  (search/search.mjs as extension/search/search.mjs)
  (search/search.css as extension/search/search.css)))
