(install
 (section
  (site
   (noematic firefox)))
 (files
  (manifest.firefox.json as manifest.json)
  (background/background.event.mjs as background/background.mjs)
  (common/common.mjs as common/common.mjs)
  (content/content.js as content/content.js)
  (icons/noematic-48.png as icons/noematic-48.png)
  (popup/popup.css as popup/popup.css)
  (popup/popup.html as popup/popup.html)
  (popup/popup.mjs as popup/popup.mjs)
  (search/index.css as search/index.css)
  (search/index.html as search/index.html)
  (search/search-result.mjs as search/search-result.mjs)
  (search/search.css as search/search.css)
  (search/search.html as search/search.html)
  (search/search.mjs as search/search.mjs)
  (search/shared.css as search/shared.css)))

(install
 (section
  (site
   (noematic chromium)))
 (files
  (manifest.chromium.json as manifest.json)
  (background/background.worker.mjs as background/background.mjs)
  (common/common.mjs as common/common.mjs)
  (content/content.js as content/content.js)
  (icons/noematic-48.png as icons/noematic-48.png)
  (popup/popup.css as popup/popup.css)
  (popup/popup.html as popup/popup.html)
  (popup/popup.mjs as popup/popup.mjs)
  (search/index.css as search/index.css)
  (search/index.html as search/index.html)
  (search/search-result.mjs as search/search-result.mjs)
  (search/search.css as search/search.css)
  (search/search.html as search/search.html)
  (search/search.mjs as search/search.mjs)
  (search/shared.css as search/shared.css)))
