(install
 (section
  (site
   (noematic extension)))
 (files
  (manifest.firefox.json as firefox/manifest.json)
  (background/background.mjs as firefox/background/background.mjs)
  (common/common.mjs as firefox/common/common.mjs)
  (common/message-collector.mjs as firefox/common/message-collector.mjs)
  (content/content.js as firefox/content/content.js)
  (icons/noematic-48.png as firefox/icons/noematic-48.png)
  (popup/popup.css as firefox/popup/popup.css)
  (popup/popup.html as firefox/popup/popup.html)
  (popup/popup.mjs as firefox/popup/popup.mjs)
  (search/index.css as firefox/search/index.css)
  (search/index.html as firefox/search/index.html)
  (search/search-result.mjs as firefox/search/search-result.mjs)
  (search/search.css as firefox/search/search.css)
  (search/search.html as firefox/search/search.html)
  (search/search.mjs as firefox/search/search.mjs)
  (search/shared.css as firefox/search/shared.css)))

(install
 (section
  (site
   (noematic extension)))
 (files
  (manifest.chromium.json as chromium/manifest.json)
  (background/background.mjs as chromium/background/background.mjs)
  (common/common.mjs as chromium/common/common.mjs)
  (common/message-collector.mjs as chromium/common/message-collector.mjs)
  (content/content.js as chromium/content/content.js)
  (icons/noematic-48.png as chromium/icons/noematic-48.png)
  (popup/popup.css as chromium/popup/popup.css)
  (popup/popup.html as chromium/popup/popup.html)
  (popup/popup.mjs as chromium/popup/popup.mjs)
  (search/index.css as chromium/search/index.css)
  (search/index.html as chromium/search/index.html)
  (search/search-result.mjs as chromium/search/search-result.mjs)
  (search/search.css as chromium/search/search.css)
  (search/search.html as chromium/search/search.html)
  (search/search.mjs as chromium/search/search.mjs)
  (search/shared.css as chromium/search/shared.css)))
