[package]
name = "noematic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
semver = { version = "1.0.20", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
