[package]
name = "noematic"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
directories = "5.0.1"
regex = "1.10.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
