[package]
name = "noematic"
version = "0.1.0"
edition = "2024"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
regex = "1.10.2"
rusqlite = { version = "0.34.0", features = ["bundled"] }
semver = { version = "1.0.20", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
