(executable
 (name min)
 (modules min)
 (libraries brr)
 (modes js))

(rule
 (alias runmin)
 (package noematic)
 (deps
  min.bc.js
  (:js min.mjs))
 (action
  (run %{bin:node} --test %{js})))

(executable
 (name smoke)
 (modules smoke)
 (libraries brr)
 (modes js))

(rule
 (alias runsmoke)
 (package noematic)
 (deps
  smoke.bc.js
  (:js smoke.mjs))
 (action
  (run %{bin:node} --test %{js})))

; ; Another possibility
; (alias
;  (name nodetest)
;  (deps
;   (alias runmin)
;   (alias runsmoke)))

(rule
 (alias nodetest)
 (deps
  min.bc.js
  (:min min.mjs)
  smoke.bc.js
  (:smoke smoke.mjs))
 (action
  (run %{bin:node} --test %{min} %{smoke})))
