(rule
 (target exe.ml)
 (action
  (with-stdout-to
   %{target}
   (echo "let path = {|%{bin:noematic-host}|}"))))

(test
 (name host_test)
 (modules host_test exe)
 (libraries alcotest fmt noematic unix yojson)
 (preprocess
  (pps ppx_yojson)))

(library
 (name message_expect)
 (modules message_expect)
 (inline_tests)
 (libraries base noematic ppx_expect.config_types yojson)
 (preprocess
  (pps ppx_expect ppx_yojson)))

(test
 (name message_test)
 (modules message_test)
 (libraries alcotest fmt noematic yojson)
 (preprocess
  (pps ppx_yojson)))
